[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -42.0
margin_top = -52.0
margin_right = 42.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="."]
margin_left = -48.0
margin_top = -53.0
margin_right = -25.0
margin_bottom = -33.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 3.0
margin_top = 31.0
margin_right = 27.0
margin_bottom = 49.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
